# NEXON-AI

./: .build-trigger  .dockerignore  .gitignore  Dockerfile  README.md  SYNC_VERIFICATION_0047.txt  default.env  inference.py  openenv.yaml  pyproject.toml  setup.bat  setup.sh
achievements/: unlock1_1775748098.txt  unlock2_1775748104.txt
backend/: config.py  main.py  requirements.txt
backend/api/routes/: model_routes.py  openenv.py
backend/core/: agent_runner.py  environment.py  episode_manager.py  reward_engine.py
backend/models/: model_manager.py
backend/scenarios/data/easy/: software-incident.json
backend/scenarios/data/hard/: cascade-system-failure.json
backend/scenarios/data/medium/: business-process-failure.json
backend/scenarios/graders/: easy_grader.py  hard_grader.py  medium_grader.py
backend/tools/: tool_registry.py
backend/utils/: embeddings.py
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/components/: EpisodeEndOverlay.jsx  Layout.jsx  SideNavBar.jsx  TopNavBar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/views/: DashboardView.jsx  SettingsView.jsx
server/: app.py
tests/: test_environment.py  test_reward.py
