[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "1.0.0"
description = "NEXUS - Dual Agent Incident Investigation Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
nexus-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
